<resources>
    <string name="app_name">Period Tracker</string>
    <string name="weclome_stat">Welcome to Period Tracker</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_text">Enter</string>

    <!--signup pg strings-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirmpswd_hint">Confirm Password</string>
    <string name="birthdate">Birth Date: </string>
    <string name="last_period_date">Last Period: </string>
    <string name="period_length">Period Length: </string>
    <string name="cycle_length">Cycle Length: </string>
    <string name="privacy_stat">We are committed to protecting your privacy and the security of your personal data.</string>
    <string name="register_btn">Register</string>
    <string name="login_text">Already Have an Account? Login</string>

    <!--login pg strings-->
    <string name="forget_pswd">Forget Password</string>
    <string name="login_btn">Login</string>
    <string name="register_text">Don\'t Have Account Yet? Register</string>

    <!--profile pg strings-->
    <string name="user_id">User ID</string>
    <string name="user_email">email@example.com</string>
    <string name="user_age">Age: %d</string>
    <string name="period_info">Period Info</string>
    <string name="setting_btn">Setting</string>
    <string name="collection_btn">My Collection</string>

    <!--setting pg strings-->
    <string name="general_setting">General Setting</string>
    <string name="language_setting">Language</string>
    <string name="account_mgmnt">Account Management</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="change_id">Change ID</string>
    <string name="change_email">Change Email</string>
    <string name="change_pswd">Change Password</string>
    <string name="notification_setting">Notification</string>
    <string name="notification_switch">Notification On/Off</string>
    <string name="reminder_1">Reminder 1: </string>
    <string name="remindertime_1">09:00</string>
    <string name="remindertime_1_setting">Set Alarm</string>
    <string name="reminder_2">Reminder 2: </string>
    <string name="remindertime_2">21:00</string>
    <string name="remindertime_2_setting">Set Alarm</string>
    <string name="water_reminder">Water Reminder</string>
    <string name="water_reminder_time">Water Reminder: </string>
    <string name="water_reminder_time_text">Every 2 Hours</string>
    <string name="set_water_alarm">Set Alarm</string>
    <string name="account_control">Account</string>
    <string name="account_logout">Logout</string>
    <string name="account_delete">Delete Account</string>

    <!--login class strings-->
    <string name="enter_email_EmptyError">Please enter your email.</string>
    <string name="enter_pswd_EmptyError">Please enter your password.</string>
    <string name="login_successful">Login Successful.</string>
    <string name="login_failed">Login Failed: </string>

    <!--signup class strings-->
    <string name="enter_valid_email">Please use a valid email address.</string>
    <string name="enter_valid_pswd"> The password must contain 8 characters and have at least one uppercase letter, one lowercase letter, one number and one special symbol.</string>
    <string name="enter_pswd_NotMatch">Password not match.</string>
    <string name="register_successful">Register Successful.</string>
    <string name="register_failed">Register failed: </string>

    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_forum">Forum</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="toolbar_title">My Calendar</string>

    <string name="btn_start_period">Start Period</string>
    <string name="btn_end_period">End Period</string>

    <string name="cycle_predictions_title">Cycle Predictions</string>
    <string name="next_period">Next Period: %1$s</string>
    <string name="ovulation">Ovulation: %1$s</string>
    <string name="middle_pain">Middle Pain: %1$s</string>
    <string name="luteal_phase">Luteal Phase: %1$s</string>
    <string name="follicular_phase">Follicular Phase: %1$s</string>
    <string name="undefined">Undefined</string>

    <string name="recent_notes_title">Recent Notes</string>
    <string name="no_recent_notes">No recent notes</string>

    <string name="btn_edit_note">Edit Note</string>
    <string name="btn_delete_note">Delete Note</string>

    <string name="todays_activities_title">Today\'s Activities</string>
    <string name="btn_add_note">Add a note</string>
    <string name="btn_add_symptoms">Add symptoms</string>

    <string name="water_intake">Water Intake: %s ml</string>
    <string name="btn_add_water">+</string>

    <string name="timeline">Timeline</string>

    <!-- Symptoms -->
    <string-array name="symptom_array">
        <item>Cramps</item>
        <item>Headache</item>
        <item>Bloating</item>
        <item>Fatigue</item>
        <item>Mood Swings</item>
        <item>Breast Tenderness</item>
        <item>Acne</item>
        <item>Backache</item>
    </string-array>

    <string name="luteal_phase1">Luteal Phase: %1$s - %2$s</string>
    <string name="follicular_phase1">Follicular Phase: %1$s - %2$s</string>

    <string name="calendar_legend">Calendar Legend</string>
    <string name="legend_period">Legend Period</string>
    <string name="legend_follicular">Legend Follicular</string>
    <string name="legend_ovulation">Legend Ovulation</string>
    <string name="legend_luteal">Legend Luteal</string>
    <string name="legend_middle_pain">Legend Middle Pain</string>

    <string name="like_count">Like (%d)</string>
</resources>